--- a/index.html
+++ b/index.html
@@ -1,52 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
-
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-
-  <title>Creative - Start Bootstrap Theme</title>
-
+  <title>Catalogo - Deusimar Junior</title>
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet">
   <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
-
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
-
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="css/creative.min.css" rel="stylesheet">
-
 </head>
 
 <body id="page-top">
-
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Deusimar Junior</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            <a class="nav-link js-scroll-trigger" href="#about">Sobre</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Services</a>
+            <a class="nav-link js-scroll-trigger" href="#services">Serviços</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            <a class="nav-link js-scroll-trigger" href="#contact">Contato</a>
           </li>
         </ul>
       </div>
@@ -58,26 +50,26 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">Your Favorite Source of Free Bootstrap Themes</h1>
+          <h1 class="text-uppercase text-white font-weight-bold">Bem vindos</h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+          <p class="text-white-75 font-weight-light mb-5">Aqui você saberá quem sou, meus meios de contato e um gostinho do que tenho a oferecer, bora?!</p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Vamos!</a>
         </div>
       </div>
     </div>
   </header>
 
   <!-- About Section -->
-  <section class="page-section bg-primary" id="about">
+  <section class="page-section bg-dark text-white" id="about">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">We've got what you need!</h2>
-          <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+          <h2 class="text-white mt-0">Quem sou eu?</h2>
+          <hr class="divider my-4">
+          <p class="text-white-50 mb-4">Meu nome é Deusimar, sou técnico em infórmatica com enfase na área de design web e programação, sou do estado do Piauí e tenho minhas ações voltadas para acriação de conteudos gráficos como logomarcas, sites, videos e muito mais. </p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Continuar</a>
         </div>
       </div>
     </div>
@@ -86,35 +78,35 @@
   <!-- Services Section -->
   <section class="page-section" id="services">
     <div class="container">
-      <h2 class="text-center mt-0">At Your Service</h2>
+      <h2 class="text-center mt-0">Por que escolher meus serviços?</h2>
       <hr class="divider my-4">
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Sturdy Themes</h3>
-            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+            <h3 class="h4 mb-2">Projetos</h3>
+            <p class="text-muted mb-0">Os projetos são lapidados constantimente para mantê-los sempre atualizados e modernos!</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Up to Date</h3>
-            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+            <h3 class="h4 mb-2">Web Pages</h3>
+            <p class="text-muted mb-0">Páginas web específicas para o seu estilo de negócios.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Ready to Publish</h3>
-            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+            <h3 class="h4 mb-2">Marketing</h3>
+            <p class="text-muted mb-0">Criação de publicidade nas redes sociais!</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Made with Love</h3>
-            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+            <h3 class="h4 mb-2">Feito para você</h3>
+            <p class="text-muted mb-0">O seu gosto é prioridade aqui.</p>
           </div>
         </div>
       </div>
@@ -125,124 +117,221 @@
   <section id="portfolio">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
+        <div class="container">
+          <h2 class="text-center mt-0">Logomarcas</h2>
+          <hr class="divider my-4">
+        </div> 
+
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/1.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Loja
               </div>
               <div class="project-name">
-                Project Name
+                Conceito Store
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/2.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Logo
               </div>
               <div class="project-name">
-                Project Name
+                Técnico de Informática
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/3.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Logo
               </div>
               <div class="project-name">
-                Project Name
+                Técnico de Informática
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/4.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Loja
               </div>
               <div class="project-name">
-                Project Name
+                ProAgre
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/5.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
             <div class="portfolio-box-caption">
-              <div class="project-category text-white-50">
-                Category
+             <div class="project-category text-white-50">
+                Logo
               </div>
               <div class="project-name">
-                Project Name
+                Mecatrônica
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/6.jpg">
             <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
-                Category
+                Grêmio Estudantil
               </div>
               <div class="project-name">
-                Project Name
+                Ingazeiras
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/7.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/7.jpg" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-category text-white-50">
+                 Projeto
+              </div>
+              <div class="project-name">
+                Sirius
+              </div>
+            </div>
+          </a>
+        </div>
+         <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/8.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/8.jpg" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-category text-white-50">
+               Projeto Comunitário
+              </div>
+              <div class="project-name">
+                Compartilhando Vida
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/9.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/9.jpg" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-category text-white-50">
+                Projeto 
+              </div>
+              <div class="project-name">
+                Ah, lembrei!
               </div>
             </div>
           </a>
         </div>
       </div>
-    </div>
+    </div> 
+    <div class="container-fluid p-0" style="margin-top: 70px!important;">
+      <div class="row no-gutters">
+        <div class="container">
+          <h2 class="text-center mt-0">Sites</h2>
+          <hr class="divider my-4">
+        </div> 
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/site1.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/site1.jpg" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-category text-white-50">
+                Site de Divulgação
+              </div>
+              <div class="project-name">
+                I EMINERAD
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/site2.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/site2.jpg" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-category text-white-50">
+                Site de Divulgação
+              </div>
+              <div class="project-name">
+                II SEMINFO
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/site3.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/site3.jpg" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-category text-white-50">
+                Projeto (IFPI)
+              </div>
+              <div class="project-name">
+                Prime
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/site4.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/site4.jpg" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-category text-white-50">
+                Projeto (IFPI)
+              </div>
+              <div class="project-name">
+                Stigma
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>     
   </section>
 
   <!-- Call to Action Section -->
-  <section class="page-section bg-dark text-white">
-    <div class="container text-center">
-      <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-      <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section class="page-section" id="contact">
+  <section class="page-section bg-dark text-white" id="contact">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0">Let's Get In Touch!</h2>
+          <h2 class="mt-0">Contatos!</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+          <p class="text-muted mb-5">Pronto para começar seu próximo projeto? Ligue ou envie-me um e-mail e entrarei em contato o mais breve possível!</p>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center">
           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>+1 (202) 555-0149</div>
+          <div>+55 (79) 98138-3196</div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+          <a class="d-block" href="mailto:juniorrsilvaa.dj@gmail.com">jjuniorssilva.dj@gmail.com</a>
         </div>
       </div>
     </div>
   </section>
 
+
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+      <div class="small text-center text-muted">Copyright &copy; 2019</div>
     </div>
   </footer>
 
