importa fotos e atualizar design

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Deusimar Junior</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><i class="fas fa-burn"></i> Deusimar Junior</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -68,7 +68,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">Quem sou eu?</h2>
           <hr class="divider my-4">
-          <p class="text-white-50 mb-4">Meu nome é Deusimar, sou técnico em infórmatica com enfase na área de design web e programação, sou do estado do Piauí e tenho minhas ações voltadas para acriação de conteudos gráficos como logomarcas, sites, videos e muito mais. </p>
+          <p class="text-white-50 mb-4">Meu nome é Deusimar, sou técnico em informática com enfase na área de design web e programação, sou do estado do Piauí e tenho minhas ações voltadas para acriação de conteudos gráficos como logomarcas, sites, videos e muito mais. </p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Continuar</a>
         </div>
       </div>
@@ -78,7 +78,7 @@
   <!-- Services Section -->
   <section class="page-section" id="services">
     <div class="container">
-      <h2 class="text-center mt-0">Por que escolher meus serviços?</h2>
+      <h2 class="text-center mt-0">Por que escolher esse serviço?</h2>
       <hr class="divider my-4">
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
@@ -99,14 +99,14 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
             <h3 class="h4 mb-2">Marketing</h3>
-            <p class="text-muted mb-0">Criação de publicidade nas redes sociais!</p>
+            <p class="text-muted mb-0">Divulgação de informções gráficas nas redes sociais!</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
             <h3 class="h4 mb-2">Feito para você</h3>
-            <p class="text-muted mb-0">O seu gosto é prioridade aqui.</p>
+            <p class="text-muted mb-0">Todos os projetos são feitos pensando no seu obetivo.</p>
           </div>
         </div>
       </div>
@@ -308,7 +308,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0">Contatos!</h2>
+          <h2 class="mt-0">Contato</h2>
           <hr class="divider my-4">
           <p class="text-muted mb-5">Pronto para começar seu próximo projeto? Ligue ou envie-me um e-mail e entrarei em contato o mais breve possível!</p>
         </div>
@@ -316,7 +316,7 @@
       <div class="row">
         <div class="col-lg-4 ml-auto text-center">
           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>+55 (79) 98138-3196</div>
+          <div>+55 (79) 998138-3196</div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
@@ -331,7 +331,7 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019</div>
+      <div class="small text-center text-muted">DeusimarJunior &copy; 2015-2019 - Todos os direitos reservados</div>
     </div>
   </footer>
 
