--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">Quem sou eu?</h2>
           <hr class="divider my-4">
-          <p class="text-white-50 mb-4">Meu nome é Deusimar, sou técnico em informática com enfase na área de design web e programação, sou do estado do Piauí e tenho minhas ações voltadas para acriação de conteudos gráficos como logomarcas, sites, videos e muito mais. </p>
+          <p class="text-white-50 mb-4">Meu nome é Deusimar, sou técnico em informática com ênfase na área de design web e programação, sou do estado do Piauí e tenho minhas ações voltadas para a criação de conteúdos gráficos como logomarcas, sites, videos e muito mais. </p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Continuar</a>
         </div>
       </div>
@@ -85,7 +85,7 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-gem text-primary mb-4"></i>
             <h3 class="h4 mb-2">Projetos</h3>
-            <p class="text-muted mb-0">Os projetos são lapidados constantimente para mantê-los sempre atualizados e modernos!</p>
+            <p class="text-muted mb-0">Os projetos são lapidados constantemente para mantê-los sempre atualizados e modernos.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -99,7 +99,7 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
             <h3 class="h4 mb-2">Marketing</h3>
-            <p class="text-muted mb-0">Divulgação de informções gráficas nas redes sociais!</p>
+            <p class="text-muted mb-0">Divulgação de informções gráficas nas redes sociais.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
