--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 Loja
               </div>
               <div class="project-name">
-                ProAgre
+                ProAgri
               </div>
             </div>
           </a>
