--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">Bem vindos</h1>
+          <h1 class="text-uppercase text-white font-weight-bold">Bem-vindos</h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
@@ -66,7 +66,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">Quem sou eu?</h2>
+          <h2 class="text-white mt-0">Quem sou?</h2>
           <hr class="divider my-4">
           <p class="text-white-50 mb-4">Meu nome é Deusimar, sou técnico em informática com ênfase na área de design web e programação, sou do estado do Piauí e tenho minhas ações voltadas para a criação de conteúdos gráficos como logomarcas, sites, videos e muito mais. </p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Continuar</a>
@@ -92,21 +92,21 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
             <h3 class="h4 mb-2">Web Pages</h3>
-            <p class="text-muted mb-0">Páginas web específicas para o seu estilo de negócios.</p>
+            <p class="text-muted mb-0">Páginas web específicas para o seu estilo de negócio.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-globe text-primary mb-4"></i>
             <h3 class="h4 mb-2">Marketing</h3>
-            <p class="text-muted mb-0">Divulgação de informções gráficas nas redes sociais.</p>
+            <p class="text-muted mb-0">Divulgação de informações gráficas nas redes sociais.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
             <h3 class="h4 mb-2">Feito para você</h3>
-            <p class="text-muted mb-0">Todos os projetos são feitos pensando no seu obetivo.</p>
+            <p class="text-muted mb-0">Todos os projetos são feitos pensando no seu objetivo.</p>
           </div>
         </div>
       </div>
