--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters">
         <div class="container">
-          <h2 class="text-center mt-0">Logomarcas</h2>
+          <h2 class="text-center mt-0">Logos</h2>
           <hr class="divider my-4">
         </div> 
 
