insere novas logos e sites

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Logo
+                Escudo
               </div>
               <div class="project-name">
                 Técnico de Informática
@@ -153,10 +153,23 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Logo
+                Escudo
               </div>
               <div class="project-name">
                 Técnico de Informática
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/10.png">
+            <img class="img-fluid" src="img/portfolio/thumbnails/10.png" alt="">
+            <div class="portfolio-box-caption">
+              <div class="project-category text-white-50">
+                Site
+              </div>
+              <div class="project-name">
+               eBooking
               </div>
             </div>
           </a>
@@ -239,6 +252,58 @@
             </div>
           </a>
         </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/11.png">
+            <img class="img-fluid" src="img/portfolio/thumbnails/11.png" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-category text-white-50">
+                Sistema
+              </div>
+              <div class="project-name">
+                Jarvis
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/12.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/12.jpg" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-category text-white-50">
+                Sistema
+              </div>
+              <div class="project-name">
+                Prime
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/13.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/13.jpg" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-category text-white-50">
+                Sistema 
+              </div>
+              <div class="project-name">
+                Manasch
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/14.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/14.jpg" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-category text-white-50">
+                Sistema 
+              </div>
+              <div class="project-name">
+                Stigma
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
     </div> 
     <div class="container-fluid p-0" style="margin-top: 70px!important;">
@@ -295,6 +360,32 @@
               </div>
               <div class="project-name">
                 Stigma
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/Site5.png">
+            <img class="img-fluid" src="img/portfolio/thumbnails/Site5.png" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-category text-white-50">
+                Projeto(IFPI)
+              </div>
+              <div class="project-name">
+                Manasch
+              </div>
+            </div>
+          </a>
+        </div>
+        <div class="col-lg-4 col-sm-6">
+          <a class="portfolio-box pd-a" href="img/portfolio/fullsize/Site6.jpg">
+            <img class="img-fluid" src="img/portfolio/thumbnails/Site6.jpg" alt="">
+            <div class="portfolio-box-caption p-3">
+              <div class="project-category text-white-50">
+                Sistema/App (INFOWAY)
+              </div>
+              <div class="project-name">
+                Sirius
               </div>
             </div>
           </a>
