--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">Quem sou?</h2>
           <hr class="divider my-4">
-          <p class="text-white-50 mb-4">Meu nome é Deusimar, sou técnico em informática com ênfase na área de design web e programação, sou do estado do Piauí e tenho minhas ações voltadas para a criação de conteúdos gráficos como logomarcas, sites, videos e muito mais. </p>
+          <p class="text-white-50 mb-4">Meu nome é Deusimar, sou técnico em informática com ênfase na área de design web e programação, sou do estado do Piauí e tenho minhas ações voltadas para a criação de conteúdos gráficos como logos, design de sites, videos e muito mais. </p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#services">Continuar</a>
         </div>
       </div>
