--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:juniorrsilvaa.dj@gmail.com">jjuniorssilva.dj@gmail.com</a>
+          <a class="d-block" href="mailto:juniorrsilvaa.dj@gmail.com">juniorrsilvaa.dj@gmail.com</a>
         </div>
       </div>
     </div>
