--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
   <!-- Theme CSS - Includes Bootstrap -->
-  <link href="css/creative.min.css" rel="stylesheet">
+  <!--<link href="css/creative.min.css" rel="stylesheet">-->
   <link href="css/responsive.css" rel="stylesheet">
 </head>
 
@@ -25,10 +25,10 @@
     <div class="container">
       <a class="navbar-brand js-scroll-trigger" href="#page-top"><img style="width: 10%;border-radius: 50px;margin-right: 15px;" src="img/perfil2.jpg">Deusimar Junior</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <i class="fas fa-bars icon_bar"></i>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto my-2 my-lg-0">
+        <ul class="navbar-nav ml-auto my-2 my-lg-0 text-center" >
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#about">Sobre</a>
           </li>
@@ -46,12 +46,11 @@
     </div>
   </nav>
 
-  <!-- Masthead -->
+  <!-- masthead --> 
   <header class="masthead">
-    <div class="container h-100">
-      
-      <div class="row h-100">
-        <div class="s_container">
+    <div class="container">
+      <div class="row">
+        <div class="s_container sc_container">
           <div class="s_child_left align-items-center justify-content-center text-center"> 
             <div class="align-self-end">
               <h1 class="text-uppercase text-white font-weight-bold">Bem-vindos</h1>
@@ -63,10 +62,8 @@
             </div>
           </div> 
           <div class="s_child_right"> <img class="boneco_1" src="img/boneco.png"></div> 
-        </div>  
+        </div>
       </div>
-
-
     </div>
   </header>
 
@@ -75,21 +72,21 @@
     <div class="container">
       <div class="row">
         <div class="s_container_2">
-           <div class="s_child_left_2"><img class="boneco_2" src="img/boneco2.png"></div> 
-        <div class="col-lg-8 text-center s_child_ridth_2">
-          <div>
-            <h2 class="text-white mt-0">Quem sou?</h2>
-            <hr class="divider my-4">
-            <p  class="mb-4 font_20">Olá sou Deusimar!</p>
-            <p class=" mb-4 size">Sou técnico em informática com ênfase na área de design web e programação, sou do estado do Piauí e tenho minhas ações voltadas para a criação de conteúdos gráficos como logos, design de sites e muito mais. </p>
+          <div class="s_child_left_2"><img class="boneco_2" src="img/boneco2.png"></div> 
+          <div class="col-lg-8 text-center s_child_ridth_2">
+            <div>
+              <h2 class="text-white mt-0">Quem sou?</h2>
+              <hr class="divider my-4">
+              <p  class="mb-4 font_20">Olá sou Deusimar!</p>
+              <p class=" mb-4 size">Sou técnico em informática com ênfase na área de design web e programação, sou do estado do Piauí e tenho minhas ações voltadas para a criação de conteúdos gráficos como logos, design de sites e muito mais. </p>
+            </div>
+            <div style="float: left;" class="cont_1">
+             <a href="#"><i class="fab fa-facebook-f icon_social"></i></a> </li>
+             <a href="#"><i class="fab fa-instagram icon_social"></i></a></li>
+            </div>
+            <a class="btn btn-primary js-scroll-trigger btn_cont" href="#services">Continuar</a>
           </div>
-          <div style="float: left;" class="cont_1">
-           <a href="#"><i class="fab fa-facebook-f icon_social"></i></a> </li>
-           <a href="#"><i class="fab fa-instagram icon_social"></i></a></li>
-          </div>
-          <a class="btn btn-primary js-scroll-trigger btn_cont" href="#services">Continuar</a>
         </div>
-      </div>  
       </div>
     </div>
   </section>
@@ -136,7 +133,7 @@
   <section id="portfolio" style="background-color:dimgrey;">
     <div class="container-fluid p-0">
       <div class="row no-gutters">
-        <div class="container" style="margin-top: 40px">
+        <div class="container w100" style="margin-top: 40px">
           <p class="text-center mt-0">Portifolio</p>
           <h2 class="text-center mt-0">Alguns dos meus trabalhos</h2>
           <hr class="divider my-4">
@@ -291,7 +288,7 @@
     </div> 
     <div class="container-fluid p-0" style="margin-top: 70px!important;">
       <div class="row no-gutters">
-        <div class="container">
+        <div class="container w100">
           <h2 class="text-center mt-0">Sites</h2>
           <hr class="divider my-4">
         </div> 
