--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
   <title>Portifolio - Deusimar Junior</title>
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -15,8 +13,8 @@
   <!-- Plugin CSS -->
   <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
   <!-- Theme CSS - Includes Bootstrap -->
-  <!--<link href="css/creative.min.css" rel="stylesheet">-->
-  <link href="css/responsive.css" rel="stylesheet">
+  <!--<link href="css/custom.min.css" rel="stylesheet">-->
+  <link href="css/custom.css" rel="stylesheet">
 </head>
 
 <body id="page-top">
@@ -167,8 +165,8 @@
             </div>
           </a>
           <div class="card-body text-center">
-            <p>Conceito Store </p>
-            <p class="info_card"> Loja Virtual </p>
+            <p>Eng. Mecatrônica  </p>
+            <p class="info_card"> DEMO </p>
           </div>
         </div>
         </div>
@@ -183,15 +181,15 @@
             </div>
           </a>
           <div class="card-body text-center">
-            <p>Conceito Store </p>
-            <p class="info_card"> Loja Virtual </p>
+            <p>Informática </p>
+            <p class="info_card"> Brasão Estudantil </p>
           </div>
         </div>
         </div>
          <div class="col-lg-4 col-sm-6"style="padding: 20px">
           <div class="card bg-card">
-          <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
+          <a class="portfolio-box" href="img/portfolio/fullsize/4.png">
+            <img class="img-fluid" src="img/portfolio/thumbnails/4.png" alt="">
             <div class="portfolio-box-caption">
               <div class="project-name">
                <i class="fas fa-search search_icon"></i>
@@ -199,8 +197,8 @@
             </div>
           </a>
           <div class="card-body text-center">
-            <p>Conceito Store </p>
-            <p class="info_card"> Loja Virtual </p>
+            <p>e-booking </p>
+            <p class="info_card"> Sistema </p>
           </div>
         </div>
         </div>
@@ -215,8 +213,8 @@
             </div>
           </a>
           <div class="card-body text-center">
-            <p>Conceito Store </p>
-            <p class="info_card"> Loja Virtual </p>
+            <p>Infomática </p>
+            <p class="info_card"> Brasão Estudantil </p>
           </div>
         </div>
         </div>
@@ -231,8 +229,8 @@
             </div>
           </a>
           <div class="card-body text-center">
-            <p>Conceito Store </p>
-            <p class="info_card"> Loja Virtual </p>
+            <p>Ingazeiras </p>
+            <p class="info_card"> Grêmio </p>
           </div>
         </div>
         </div>
@@ -247,8 +245,8 @@
             </div>
           </a>
           <div class="card-body text-center">
-            <p>Conceito Store </p>
-            <p class="info_card"> Loja Virtual </p>
+            <p>Infomática </p>
+            <p class="info_card"> Brasão Estudantil  </p>
           </div>
         </div>
         </div>
@@ -263,8 +261,8 @@
             </div>
           </a>
           <div class="card-body text-center">
-            <p>Conceito Store </p>
-            <p class="info_card"> Loja Virtual </p>
+            <p>Eng. Mecatrônica </p>
+            <p class="info_card"> DEMO </p>
           </div>
         </div>
         </div>
@@ -279,8 +277,8 @@
             </div>
           </a>
           <div class="card-body text-center">
-            <p>Conceito Store </p>
-            <p class="info_card"> Loja Virtual </p>
+            <p>ProAgri </p>
+            <p class="info_card"> Empresa </p>
           </div>
         </div>
         </div>
@@ -355,7 +353,7 @@
             </a>
             <div class="card-body text-center">
               <p>STIGMA</p>
-              <p class="info_card_site"> Auditória Estudantil </p>
+              <p class="info_card_site"> Sitema de Auditoria</p>
             </div>
           </div>
         </div>
@@ -389,7 +387,7 @@
             </a>
             <div class="card-body text-center">
               <p>SIRIUS</p>
-              <p class="info_card_site"> Assistência em Socorros</p>
+              <p class="info_card_site"> App de assistência em Socorros</p>
             </div>
           </div>
         </div>
