correção dos links da redes sociais

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
               <p class=" mb-4 size">Sou técnico em informática com ênfase na área de design web e programação, sou do estado do Piauí e tenho minhas ações voltadas para a criação de conteúdos gráficos como logos, design de sites e muito mais. </p>
             </div>
             <div style="float: left;" class="cont_1">
-             <a href="www.facebook.com/Deusimar.junior67"><i class="fab fa-facebook-f icon_social"></i></a> </li>
-             <a href="www.instagram.com/jjunior.ssilva"><i class="fab fa-instagram icon_social"></i></a></li>
+             <a href="http://www.facebook.com/Deusimar.junior67"><i class="fab fa-facebook-f icon_social"></i></a> </li>
+             <a href="http://www.instagram.com/jjunior.ssilva"><i class="fab fa-instagram icon_social"></i></a></li>
             </div>
             <a class="btn btn-primary js-scroll-trigger btn_cont" href="#services">Continuar</a>
           </div>
