adiciona links ao portifolio

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             <div>
               <h2 class="text-white mt-0">Quem sou?</h2>
               <hr class="divider my-4">
-              <p  class="mb-4 font_20">Olá sou Deusimar!</p>
-              <p class=" mb-4 size">Sou técnico em informática com ênfase na área de design web e programação, sou do estado do Piauí e tenho minhas ações voltadas para a criação de conteúdos gráficos como logos, design de sites e muito mais. </p>
+              <p  class="mb-4 font_20">Olá, sou Deusimar!</p>
+              <p class=" mb-4 size">Sou técnico em informática com ênfase na área de design web e programação, sou do estado do Piauí e tenho minhas ações voltadas para a criação de conteúdos gráficos como logos, desenhos, design de sites e muito mais. </p>
             </div>
             <div style="float: left;" class="cont_1">
              <a href="http://www.facebook.com/Deusimar.junior67"><i class="fab fa-facebook-f icon_social"></i></a> </li>
@@ -303,6 +303,7 @@
             <div class="card-body text-center">
               <p>I EMINERAD</p>
               <p class="info_card_site"> Site de Evento </p>
+              <button id="btn_1" class="bnt_link"> Visitar</button>
             </div>
           </div>
         </div>
@@ -320,6 +321,7 @@
             <div class="card-body text-center">
               <p>II SEMINFO</p>
               <p class="info_card_site"> Site de Evento </p>
+              <button id="btn_2" class="bnt_link"> Visitar</button>
             </div>
           </div>
         </div>
@@ -426,7 +428,7 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">DeusimarJunior &copy; 2015-2019 - Todos os direitos reservados</div>
+      <div class="small text-center text-muted"> 2015-2019 - Todos os direitos reservados</div>
     </div>
   </footer>
 
@@ -439,7 +441,7 @@
   <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/creative.min.js"></script>
+  <script src="js/creative.js"></script>
 
 </body>
 
